<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editUserId"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/registationString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nameString"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="166dp" />

    <EditText
        android:id="@+id/editUserBranch"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
       android:hint="@string/branchString"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="242dp" />

    <EditText
        android:id="@+id/editTextUserPassword"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/passwordString"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="308dp" />

    <Button
        android:id="@+id/SubmitButton"
        android:layout_marginTop="20dp"
        android:layout_width="154dp"
        android:layout_height="82dp"
        android:text="@string/submitButton"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="397dp" />
</LinearLayout>